# sleek-accounts

./: .gitignore  Cargo.toml  README.md
src/: build.rs  config.rs  exporter.rs  main.rs  models.rs  text_detector.rs  text_ocr.rs  ui.rs
