[package]
name = "my_text_detector_app"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.16.1"
opencv = "0.92"
anyhow = "1.0"
pdfium-render = "0.8.37"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.10"
regex = "1.12.2"

[[bin]]
name = "AILoupe_Accounting"
path = "src/main.rs"
